--- a/survey/package.json
+++ b/survey/package.json
@@ -9,6 +9,7 @@
     "react-color": "^2.17.0",
     "react-dom": "^16.7.0",
     "react-hover": "^1.3.4",
+    "react-media": "^1.9.2",
     "react-medium-image-zoom": "^3.0.15",
     "react-scripts": "2.1.3",
     "react-simple-colorpicker": "^1.4.2"
